--- a/.github/workflows/verifies.yml
+++ b/.github/workflows/verifies.yml
@@ -18,10 +18,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/checkout@v4
         with:
-          role-to-assume: arn:aws:iam::274024183386:user/TestMan # Replace with your IAM Role ARN
-          aws-region: us-east-2 # Replace with your desired AWS region
+          role-to-assume: arn:aws:iam::274024183386:user/TestMan 
+          # Replace with your IAM Role ARN
+          aws-region: us-east-2 
+          # Replace with your desired AWS region
 
       - name: Verify AWS Identity
         run: |
