--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -40,8 +40,10 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
+      - name: Create dev.tfvars from input
+        run: |
+          echo "aws_ecr_repository_name = \"${{ github.event.inputs.ecr_repo }}\"" > dev.tfvars
+
       - name: Terraform Apply
         run: |
-          terraform apply -auto-approve \
-            -var="aws_region=${{ secrets.AWS_REGION }}" \
-            -var="ecr_repo_name=${{ github.event.inputs.ecr_repo }}"
+          terraform apply -auto-approve -var-file=dev.tfvars
