--- a/.github/workflows/ECR_OIDC.yml
+++ b/.github/workflows/ECR_OIDC.yml
@@ -1,4 +1,4 @@
-name: GitHub Testing OIDC ECR AGAIN
+name: GitHub Testing OIDC ECR 2nd Attempt
 
 on:
   workflow_dispatch:
@@ -23,6 +23,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
+
+      - name: Verify GitHub CLI Identity
+        run: |
+            echo "Running as: ${{ github.actor }}"
+            gh auth status
+        env:
+            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Verify OIDC
         uses: aws-actions/configure-aws-credentials@v4.1.0
         with:
@@ -32,13 +40,6 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.9.0
-
-      - name: Verify GitHub CLI Identity
-        run: |
-            echo "Running as: ${{ github.actor }}"
-            gh auth status
-        env:
-            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Terraform Init
         run: terraform init
