--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -8,42 +8,43 @@ on:
         type: string
 
 jobs:
-  terraform:
+  verify_user:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: .
-
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Verify GitHub CLI Identity
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "Running as: ${{ github.actor }}"
+          gh auth status
+
+      - name: Configure AWS credentials (OIDC)
+        uses: aws-actions/configure-aws-credentials@v4.1.0
+        with:
+          aws-region: us-east-2
+          role-to-assume: ${{ secrets.AWS_OIDC_ACCESS }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.9.0
 
-      - name: Verify GitHub CLI Identity
-        run: |
-            echo "Running as: ${{ github.actor }}"
-            gh auth status
-        env:
-            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.ACCESS_KEY_FOR_GITHUB }}
-          aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY_FOR_GITHUB }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
       - name: Terraform Init
         run: terraform init
 
       - name: Create dev.tfvars from input
         run: |
-          echo "aws_ecr_repository_name = \"${{ github.event.inputs.ecr_repo }}\"" > dev.tfvars
+          echo "aws_ecr_repository_name = \"${{ github.event.inputs.ecr_repo || 'my-ecr-default-repo' }}\"" > dev.tfvars
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Terraform Plan
+        run: terraform plan -var-file=dev.tfvars
 
       - name: Terraform Apply
-        run: |
-          terraform apply -auto-approve -var-file=dev.tfvars
+        if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/OIDC_ECR'
+        run: terraform apply -auto-approve -var-file=dev.tfvars
