--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -1,5 +1,8 @@
 name: 3rd Try - GitHub OIDC to ECR with Terraform by @Sharif
 on:
+  push:
+    branches:
+      - Testing
   workflow_dispatch:
     inputs:
       ecr_repo:
@@ -10,9 +13,6 @@ on:
         description: "GitHub repository name (e.g., owner/repo)"
         required: true
         type: string
-
-  push:
-    branches: [Testing]
 
 permissions:
   id-token: write
